tests/typechecking/fail/multifun.spl
t id (t v)
{
	return v;
}

Int id (Int v)
{
	return v;
}
